cluster/apps/kubevirt/cdi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdi-ingress
  namespace: cdi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host cdi.sparks.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: acme-crt-secret-sparks-codes
